# simple-countdown-app

./: CMakeLists.txt  LICENSE  README.md  countdown_label.cpp  countdown_label.h  countdown_label.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  resources.qrc
